Frameworks/OpenGL/mesa/src/compiler/glsl/glcpp/tests/091-hash-line.c.expected
0:0(1): preprocessor error: #error line 0 error
0:25(1): preprocessor error: #error line 25 error
1:0(1): preprocessor error: #error source 1, line 0 error
2:30(1): preprocessor error: #error source 2, line 30 error
#line 0
#line 25
#line 0 1
#line 30 2
#line 45 2


#line 90 2

#line 180 2
